# QuestRust

./: .gitignore  Cargo.toml  potential_optimizations_because_we_want_to_avoid_clone.txt
.github/workflows/: rust-tests.yml
level_editor/: README.md  cur_level.json  index.html  level_editor.js  package.json  tsconfig.json  webpack.config.js
level_editor/src/: level_editor.ts
src/: error.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs  window.rs
src/game_data/: cur_level.json  d.json  dick.json  entity_archetypes.json  entity_attack_patterns.json  entity_attacks.json  item.json  items.json  loot_tables.json  player_attacks.json  rooms.json  spawn_archetypes.json  sprites.json  starting_level.json  terrain_archetypes.json
src/game_engine/: camera.rs  command_line_input.rs  components.rs  entities.rs  entity_attacks.rs  entity_components.rs  game.rs  inventory.rs  item.rs  items_on_floor.rs  json_parsing.rs  level_editor.rs  loot.rs  magic.rs  mod.rs  pathfinding.rs  player.rs  player_abilities.rs  player_attacks.rs  starting_level_generator.rs  stat.rs  terrain.rs  ui.rs  utils.rs  world.rs
src/game_engine/level_editor/: level_editor.rs
src/rendering_engine/: abstractions.rs  grass.psd  mod.rs  renderer.rs  shader.wgsl  sprite_sheet_generation_abstraction.rs  state.rs  texture.rs  vertex.rs  window.rs
src/rendering_engine/img/: Thumbs.db  health.psd  (+1 more)
src/tests/: basic_tests.rs  entity_attack_tests.rs  entity_pathfinding_tests.rs  headless.rs  headless_state.rs  inventory_movement_tests.rs  item_drop_tests.rs  mod.rs  player_attack_tests.rs  player_collision_tests.rs  player_movement_tests.rs  test_framework.rs  tests.rs  world_generation_tests.rs
(+11 files in other folders)
