[package]
name = "QuestRust"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0.1"
winit = "0.29"
pollster = "0.3"
log = "0.4.22"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0.93"
rustc-hash = "2.1.0"
rand = "0.8.5"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0" 
[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]
