[package]
name = "QuestRust"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "24.0.0"
winit = "0.29"
pollster = "0.4.0"
log = "0.4.22"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0.95"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135" 
tokio = { version = "1.43.0", features = ["full"] }
wgpu_text = "0.9.2"
colorized = "1.0.0"
term_size = "0.3.2"
[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]
